# rust-audit-tables

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
config/: config.yaml
docs/schemas/: schema.puml
init/: 01_create_customer_and_audit.sql.sql
src/: config.rs  db.rs  main.rs  model.rs  partition.rs  writer.rs
